package MITELOVERS.persistence;

import MITELOVERS.domain.library.Library;
import MITELOVERS.domain.repository.ILibraryRepo;
import MITELOVERS.domain.valueobject.ItemId;
import MITELOVERS.domain.valueobject.LibraryId;
import MITELOVERS.domain.valueobject.UserId;

import java.util.*;

/**
 * In-memory repository responsible for managing {@link Library} aggregates.
 *
 * <p>
 * This implementation of {@link ILibraryRepo} stores {@link Library} instances
 * in a {@link java.util.HashMap}, using {@link LibraryId} as the key.
 * It acts as a persistence adapter that isolates the domain and controller
 * layers from storage concerns.
 * </p>
 *
 * <p>
 * The repository supports basic CRUD-style operations, as well as domain-specific
 * queries such as retrieving a library by {@link UserId}, checking whether an
 * {@link ItemId} exists in any library, and retrieving all items for a given user.
 * </p>
 */

public class MemLibraryRepo implements ILibraryRepo {

    private final Map<LibraryId, Library> DATA = new HashMap<LibraryId, Library>();

    @Override
    public Library save(Library myLibrary) {

        DATA.put(myLibrary.identity(), myLibrary);
        return myLibrary;

    }

    @Override
    public Iterable<Library> findAll() {

        return DATA.values();

    }

    @Override
    public List<LibraryId> findAllKeys() {

        return new ArrayList<>(DATA.keySet());

    }

    @Override
    public Optional<Library> ofIdentity(LibraryId id) {

        if(!containsOfIdentity(id)) {

            return Optional.empty();

        } else {

            return Optional.of(DATA.get(id));

        }

    }

    @Override
    public boolean containsOfIdentity(LibraryId id) {

        return DATA.containsKey(id);

    }

}
