package MITELOVERS.persistence.springdata;

import MITELOVERS.persistence.jpa.datamodel.LibraryDataModel;
import org.springframework.data.jpa.repository.JpaRepository;

public interface ILibrarySpringDataRepo extends JpaRepository<LibraryDataModel, String> {

}
